<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sounds_list">
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/OK"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/Sound1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound1"
            android:layout_weight="1"
            android:onClick="choose"/>
        <RadioButton
            android:id="@+id/Sound2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound2"
            android:layout_weight="1"
            android:onClick="choose"/>
        <RadioButton
            android:id="@+id/Sound3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound3"
            android:layout_weight="1"
            android:onClick="choose"/>
        <RadioButton
            android:id="@+id/Sound4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound4"
            android:layout_weight="1"
            android:onClick="choose"/>
        <RadioButton
            android:id="@+id/Sound5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound5"
            android:layout_weight="1"
            android:onClick="choose"/>
        <RadioButton
            android:id="@+id/Sound6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sound6"
            android:layout_weight="1"
            android:onClick="choose"/>

    </RadioGroup>

    <Button
        android:id="@+id/Cancel"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:text="@string/Cancel"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/OK"
        android:layout_width="150dp"
        android:onClick="cancel"/>

    <Button
        android:id="@+id/OK"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Ok"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_width="150dp"
        android:onClick="ok"/>
</android.support.constraint.ConstraintLayout>